--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,56 @@
-* {
-  box-sizing: border-box;
-}
-
 body {
   margin: 0;
-  font-family: system-ui, sans-serif;
-  color: black;
-  background-color: white;
-}
-
-nav {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  padding: 0.5rem;
-  gap: 0.5rem;
-  border-bottom: solid 1px #aaa;
-  background-color: #eee;
-}
-
-nav a {
-  display: inline-block;
-  min-width: 9rem;
-  padding: 0.5rem;
-  border-radius: 0.2rem;
-  border: solid 1px #aaa;
-  text-align: center;
-  text-decoration: none;
-  color: #555;
-}
-
-nav a[aria-current='page'] {
-  color: #000;
-  background-color: #d4d4d4;
-}
-
-main {
-  padding: 1rem;
+  padding: 0;
+  font-family: sans-serif;
 }
 
 h1 {
-  font-weight: bold;
-  font-size: 1.5rem;
+  text-align: center;
+  margin-top: 50px;
+}
+
+.container {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 50px;
+}
+
+.container > * {
+  width: 48%;
+}
+
+textarea,
+#output {
+  height: 300px;
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 5px;
+}
+
+textarea {
+  resize: none;
+  border: 1px solid gray;
+}
+
+button {
+  display: block;
+  margin: 20px auto;
+  width: 150px;
+  height: 50px;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+button:hover {
+  background-color: #3e8e41;
+}
+
+#output {
+  border: 1px solid black;
+  overflow-y: scroll;
 }
