--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,30 @@
-body {
+body,
+html {
   margin: 0;
   padding: 0;
+  height: 100%;
   font-family: sans-serif;
-}
-
-h1 {
-  text-align: center;
-  margin-top: 50px;
 }
 
 .container {
   display: flex;
   justify-content: space-between;
-  margin-top: 50px;
+  height: 100%;
 }
 
 .container > * {
-  width: 48%;
+  width: 49%;
+  height: 100%;
 }
 
 textarea,
 #output {
-  height: 300px;
+  width: 100%;
+  height: 100%;
   padding: 10px;
   font-size: 16px;
   border-radius: 5px;
+  box-sizing: border-box;
 }
 
 textarea {
