--- a/styles.css
+++ b/styles.css
@@ -8,31 +8,27 @@ html {
 
 .container {
   display: flex;
-  justify-content: space-between;
   height: 100%;
-}
-
-.container > * {
-  width: 49%;
-  height: 100%;
-}
-
-textarea,
-#output {
-  width: 100%;
-  height: 100%;
-  padding: 10px;
-  font-size: 16px;
-  border-radius: 5px;
-  box-sizing: border-box;
 }
 
 textarea {
-  resize: none;
+  flex: 2; /* 2/3 of the width */
+  height: 100%;
+  padding: 10px;
+  font-size: 16px;
   border: 1px solid gray;
+  border-radius: 5px;
+  resize: none;
+  box-sizing: border-box;
 }
 
 #output {
+  flex: 1; /* 1/3 of the width */
+  height: 100%;
+  padding: 10px;
+  font-size: 16px;
   border: 1px solid black;
+  border-radius: 5px;
   overflow-y: scroll;
+  box-sizing: border-box;
 }
