--- a/styles.css
+++ b/styles.css
@@ -1,34 +1,32 @@
-body,
-html {
+body {
+  font-family: Arial, sans-serif;
+  display: flex;
+  justify-content: space-between;
+  height: 100vh;
   margin: 0;
-  padding: 0;
-  height: 100%;
-  font-family: sans-serif;
+  padding: 1em;
 }
 
-.container {
-  display: flex;
+textarea,
+pre {
+  box-sizing: border-box;
+  width: 100%;
   height: 100%;
+  padding: 1em;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  resize: none;
 }
 
 textarea {
-  flex: 2; /* 2/3 of the width */
-  height: 100%;
-  padding: 10px;
-  font-size: 16px;
-  border: 1px solid gray;
-  border-radius: 5px;
-  resize: none;
-  box-sizing: border-box;
+  width: 65%;
 }
 
-#output {
-  flex: 1; /* 1/3 of the width */
-  height: 100%;
-  padding: 10px;
-  font-size: 16px;
-  border: 1px solid black;
-  border-radius: 5px;
-  overflow-y: scroll;
-  box-sizing: border-box;
+pre {
+  width: 32%;
+  white-space: pre-wrap; /* Since CSS 2.1 */
+  white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+  white-space: -pre-wrap; /* Opera 4-6 */
+  white-space: -o-pre-wrap; /* Opera 7 */
+  word-wrap: break-word; /* Internet Explorer 5.5+ */
 }
