--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ html {
 }
 
 textarea {
-  flex: 2; /* 2/3 of the width */
+  flex: 2;
   height: 100%;
   padding: 10px;
   font-size: 16px;
@@ -23,7 +23,7 @@ textarea {
 }
 
 #output {
-  flex: 1; /* 1/3 of the width */
+  flex: 1;
   height: 100%;
   padding: 10px;
   font-size: 16px;
